--- a/instagram18.html
+++ b/instagram18.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000586.jpg" title="From today's foggy sunrise ride. #lovestarfactoryteam #cycling PC: @elliotlovestarbicycles" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>From today's foggy sunrise ride. #lovestarfactoryteam #cycling PC: @elliotlovestarbicycles</small>
+                           </div>
+                           <img src="../lsphotos/image000586.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000587.jpg" title="Foggy Sunrise ride. #lovestarfactoryteam #cycling #bicycle #bikechi #championsystem" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Foggy Sunrise ride. #lovestarfactoryteam #cycling #bicycle #bikechi #championsystem</small>
+                           </div>
+                           <img src="../lsphotos/image000587.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000588.jpg" title="Lakefront riding this morning. #cycling #lakemichigan #bicycle #bikechi #moots #lovestarfactoryteam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Lakefront riding this morning. #cycling #lakemichigan #bicycle #bikechi #moots #lovestarfactoryteam</small>
+                           </div>
+                           <img src="../lsphotos/image000588.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000589.jpg" title="Smiles for miles. #babySNUB #lovestarfactoryteam #cycling #bicycle #clearybikes #bikechi #adventuredad #dadlife" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Quick photo op at mile 50 w/ my suffer-partner @agonz21 #BarryRoubaix #lovestarfactoryteam</small>
                            </div>
                            <img src="../lsphotos/image000598.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000599.jpg" title="Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Amazing crew at #barryroubaix today. #lovestarfactoryteam #gravelgrinder #cycling #bicycle</small>
-                           </div>
-                           <img src="../lsphotos/image000599.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000600.jpg" title="Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Successful #barryroubaix 2016! #lovestarfactoryteam fielded 8 riders who spend the day crushing some hot dry and dusty gravel. #gravelgrinder #moots #bicycle #cycling</small>
-                           </div>
-                           <img src="../lsphotos/image000600.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000601.jpg" title="Ready to rock! #barryroubaix #lovestarfactoryteam" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>oliviabeaty</h4>
-                              <small>Ready to rock! #barryroubaix #lovestarfactoryteam</small>
-                           </div>
-                           <img src="../lsphotos/image000601.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
