--- a/instagram37.html
+++ b/instagram37.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000337.jpg" title="Creative frame designs require creative frame bags. This #lovestarbicyclebags custom framebag was made for a customers frankenbike. #framebagFriday #custom #handmade #bikepacking #cycling #bikechi #bicycle #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Creative frame designs require creative frame bags. This #lovestarbicyclebags custom framebag was made for a customers frankenbike. #framebagFriday #custom #handmade #bikepacking #cycling #bikechi #bicycle #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000337.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000338.jpg" title="Batch of #Lovestarbicyclebags SaddlePacks in the works. Racing stripes all around! #handmade #custom #cycling #bicycle #bikebag #bikepacking #bikechi #SewRad" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Batch of #Lovestarbicyclebags SaddlePacks in the works. Racing stripes all around! #handmade #custom #cycling #bicycle #bikebag #bikepacking #bikechi #SewRad</small>
+                           </div>
+                           <img src="../lsphotos/image000338.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000756.jpg" title="Sunshine and glory. #LSB #LoveStarFactoryTeam" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Sunshine and glory. #LSB #LoveStarFactoryTeam</small>
+                           </div>
+                           <img src="../lsphotos/image000756.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000339.jpg" title="Custom #lovestarbicyclebags SaddlePack in progress. this one has some killer stripes to match the customer's bicycle. #handmade #bikepacking #bicyclebag #cycling #bicycle #seatbag #custom #bikechi #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Details. #handmade #lovestarbicyclebags #cycling #bicyclebag #bikepacking #bikechi #bicycle</small>
                            </div>
                            <img src="../lsphotos/image000355.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000356.jpg" title="Lovestar Factory Team ride. #lovestarbicyclebags #bikechi #chiberia #chicago #bikewinter #championsystem" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Lovestar Factory Team ride. #lovestarbicyclebags #bikechi #chiberia #chicago #bikewinter #championsystem</small>
-                           </div>
-                           <img src="../lsphotos/image000356.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000357.jpg" title="It's been single digits for the last two weeks...#Cyclocross in shorts seems like a distant dream. Spring, you are welcome anytime. #cx #cycling #chicago #chiberia #bikechi #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>It's been single digits for the last two weeks...#Cyclocross in shorts seems like a distant dream. Spring, you are welcome anytime. #cx #cycling #chicago #chiberia #bikechi #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000357.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000358.jpg" title="Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Working on bags for a couple of customers during the kids nap time today. #dadlife #cycling #lovestarbicyclebags #handmade #custom #bikepacking #bikecamping #seatbag #bicycle #bikechi #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000358.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
