--- a/index.html
+++ b/index.html
@@ -173,6 +173,49 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000949.jpg" title="Well earned rewards for shredding all morning. 🍦😎
+.
+🚲" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>clearybikes</h4>
+                              <small>Well earned rewards for shredding all morning. 🍦😎
+.
+🚲</small>
+                           </div>
+                           <img src="../lsphotos/image000949.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000951.jpg" title="And just like that, it's tan line season. #tanlines #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>ddave12000</h4>
+                              <small>And just like that, it's tan line season. #tanlines #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000951.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000950.jpg" title="Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>jim_ftw</h4>
+                              <small>Gorgeous day for a ride along the shores of Beautiful Green Lake. #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000950.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000947.jpg" title="#Repost @elliotlovestarbicycles
 ・・・
 First ride of the season where sunrise is officially before the ride start time. #beyourownbrand #champsys #bikechi #lovestarraceclub #cyclingkit #cyclingphotos #cyclingapparel #cyclingphotos #cyclingjersey" rel="lightbox" class="fancybox">
@@ -391,47 +434,6 @@ First ride of the season where sunrise is officially before the ride start time.
                               <small>Lookin' fly in his mini #lovestarraceclub kit. Enjoying a Post ride breakfast at @bagelartcafe #cycling #lilshredder #kidsonbikes #bicycle #adventuredad</small>
                            </div>
                            <img src="../lsphotos/image000933.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000936.jpg" title="Sunrise ride with a little early bird. #babyARC woke up early so changed my Ride plans to include him. Huge thanks to @agonz21 for being flexible on the plan and for snapping this great picture. #bicycle #fatbike #cycling #lilshredder #kidsonbikes #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunrise ride with a little early bird. #babyARC woke up early so changed my Ride plans to include him. Huge thanks to @agonz21 for being flexible on the plan and for snapping this great picture. #bicycle #fatbike #cycling #lilshredder #kidsonbikes #adventuredad #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000936.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000929.jpg" title="Well earned rewards for shredding all morning. 🍦
-#cycling #bicycle #bikefamily #lilshredder #clearybikes #icecreamride #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Well earned rewards for shredding all morning. 🍦
-#cycling #bicycle #bikefamily #lilshredder #clearybikes #icecreamride #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000929.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000930.jpg" title="Dropping in. #cycling #mtb #mountainbiking #outsideisfree #freerangekids #adventuredad #clearybikes #lilshredder #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Dropping in. #cycling #mtb #mountainbiking #outsideisfree #freerangekids #adventuredad #clearybikes #lilshredder #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000930.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
