--- a/instagram13.html
+++ b/instagram13.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000057.jpg" title="Waking up in the dark to ride everyday can be tough...but I never get tired of sunrises over the Lake #bikechi #lakemichigan #bicycle #cycling #bike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Waking up in the dark to ride everyday can be tough...but I never get tired of sunrises over the Lake #bikechi #lakemichigan #bicycle #cycling #bike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000057.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000059.jpg" title="The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>The man who started it all, and to whom I owe a great deal. The man, the myth, the legend, @elliotlovestarbicycles #lovestarraceclub #laborday #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000059.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000060.jpg" title="Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>theandyhudson</h4>
+                              <small>Great group this morning for a ride in perfect weather. #LovestarRaceClub #SmileLikeYouMeanIt #Cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000060.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000061.jpg" title="Mini cyclocross practice on a beautiful summer evening. #bicycle #cycling #cyclocross #crossiscoming #cx #adventuredad #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>28 miles, 5700 feet of climbing. #cascadehuts #bikepacking #bikecamping #cycling #bicycle #mthood #lovestarbicyclebags #fatbike</small>
                            </div>
                            <img src="../lsphotos/image000108.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000109.jpg" title="Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Sunset gear shakedown. Dinner...sleep...then trail time begins! #bikepacking #bicycle #bikecamping #cycling #mthood #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000109.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000076.jpg" title="All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>agonz21</h4>
-                              <small>All smiles as we carb up for our epic Mt Hood ride #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000076.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000110.jpg" title="Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Handlebar Roll completes the kit. #bikepacking #fatbike #bicycle #cycling #adventurebike #bicyclebag #lovestarbicyclebags #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000110.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
