--- a/instagram25.html
+++ b/instagram25.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000214.jpg" title="Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Cyclocross Illinois Finals...Love Star Factory Team finished well! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags #yesthatreallyisahottubinbackground</small>
+                           </div>
+                           <img src="../lsphotos/image000214.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000215.jpg" title="Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Great sprint through the finish! #lovestarfactoryteam #cyclocross #lovestarbicyclebags #cycling #cyclocrosschicago</small>
+                           </div>
+                           <img src="../lsphotos/image000215.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000216.jpg" title="Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>pattylouwho55</h4>
+                              <small>Beautiful day for a race. Proud of Lovestar Factory Team strong finish! #cyclocross #cyclocrosschicago #lovestarfactoryteam #lovestar #lovestarbicyclebags</small>
+                           </div>
+                           <img src="../lsphotos/image000216.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000217.jpg" title="Beautiful course for the Illinois cyclocross finals! #cyclocross #lovestarfactoryteam #cycling #lovestarbicyclebags #fatbike #cyclocrosschicago" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>pattylouwho55</h4>
@@ -220,45 +259,6 @@
                               <small>Stunner of a racing stripe on this #lovestarbicyclebags Saddlepack. A little flash of color-matched stitching makes for a pretty awesome finish. #handmade #bicyclebag #bikepackingbags #bikepacking #SewRad</small>
                            </div>
                            <img src="../lsphotos/image000225.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000226.jpg" title="Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Finished up a classy looking #lovestarbicyclebags SaddlePack. #handmade #cycling #bicyclebag #bikepackingbags #bikepacking #Cordura #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000226.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000227.jpg" title="A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>A very wet and muddy #optoutside ride today. #fatbike #bikepackingbags #cycling #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000227.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000228.jpg" title="Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Rainy morning project. #lovestarbicyclebags #handmade #cycling #bikepackingbags #bikepacking #SewRad</small>
-                           </div>
-                           <img src="../lsphotos/image000228.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
