--- a/instagram3.html
+++ b/instagram3.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000891.jpg" title="Cold and muddy trail ride today. Kids were troopers, but it was still short lived. Sometimes the most critical parenting skill is knowing when to quit. #bicycle #bikewinter #cycling #gravelgrinder #lovestarbicyclebags #lovestarraceclub #adventuredad #dadlife" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Cold and muddy trail ride today. Kids were troopers, but it was still short lived. Sometimes the most critical parenting skill is knowing when to quit. #bicycle #bikewinter #cycling #gravelgrinder #lovestarbicyclebags #lovestarraceclub #adventuredad #dadlife</small>
+                           </div>
+                           <img src="../lsphotos/image000891.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000892.jpg" title="Twinsies. #lovestarraceclub #cycling #ridecannondale #bicycle #bikechi #bikewinter #rulenumber5" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Twinsies. #lovestarraceclub #cycling #ridecannondale #bicycle #bikechi #bikewinter #rulenumber5</small>
+                           </div>
+                           <img src="../lsphotos/image000892.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000889.jpg" title="Part of the reason I love riding gravel is that Gravel always feels like an adventure. #cycling #DPRT #bicycle #gravel #gravelgrinder #ridecannondale #adventurebike #lovestarraceclub" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Part of the reason I love riding gravel is that Gravel always feels like an adventure. #cycling #DPRT #bicycle #gravel #gravelgrinder #ridecannondale #adventurebike #lovestarraceclub</small>
+                           </div>
+                           <img src="../lsphotos/image000889.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000887.jpg" title="So excited to participate in @barryroubaix1 for the first time. I will be back next year! #lovestarraceclub" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>clintsievers</h4>
@@ -234,45 +273,6 @@ Thank you to that store team for taking such good care of us...it was appreciate
                               <small>#LovestarRaceClub off to Barry Roubaix! @ridecannondale @missionworkshop @lazersport @barryroubaix1</small>
                            </div>
                            <img src="../lsphotos/image000873.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000872.jpg" title="@ddave12000 instagramming. #barrybound #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>jim_ftw</h4>
-                              <small>@ddave12000 instagramming. #barrybound #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000872.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000870.jpg" title="Stealthy custom #lovestarbicyclebags SaddlePack for a teammate just in time for @barryroubaix1 ... I have had my shop in a holding pattern for the last few months. It's just been one thing too many to try and juggle between being a stay-at-home Dad, working part time at the shop, trying to ride and train, and keep a happy marriage ... but hopefully I'll find some additional bandwidth soon and start accepting orders! 👍 #bicycle #cycling #bikepacking #adventurebike #gravelbike #cyclocross #bicyclebag #custom #SewRad #handmade" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Stealthy custom #lovestarbicyclebags SaddlePack for a teammate just in time for @barryroubaix1 ... I have had my shop in a holding pattern for the last few months. It's just been one thing too many to try and juggle between being a stay-at-home Dad, working part time at the shop, trying to ride and train, and keep a happy marriage ... but hopefully I'll find some additional bandwidth soon and start accepting orders! 👍 #bicycle #cycling #bikepacking #adventurebike #gravelbike #cyclocross #bicyclebag #custom #SewRad #handmade</small>
-                           </div>
-                           <img src="../lsphotos/image000870.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000858.jpg" title="Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Always something new and interesting on this trail. #bikechi #cyclocross #gravelbike #bicycle #DPRT #adventurebike #lovestarraceclub</small>
-                           </div>
-                           <img src="../lsphotos/image000858.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
