--- a/instagram39.html
+++ b/instagram39.html
@@ -6,6 +6,45 @@
           <div class="col-sm-6 col-md-3 col-lg-3">
               <div class="instagram-item">
                   <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000376.jpg" title="Custom Lovestar framebag. Stealthy exterior with electric blue interior. #handmade #lovestarbicyclebags #framebag #bikebag #bikepacking #custom #cycling" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Lovestar framebag. Stealthy exterior with electric blue interior. #handmade #lovestarbicyclebags #framebag #bikebag #bikepacking #custom #cycling</small>
+                           </div>
+                           <img src="../lsphotos/image000376.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000377.jpg" title="Happy New Year! I don't know about anybody else...but I've ridden my bike to work every day this year. #cycling #moots #bikecommute #bikechi #bicycle #lovestarbicyclebags #barmitts" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Happy New Year! I don't know about anybody else...but I've ridden my bike to work every day this year. #cycling #moots #bikecommute #bikechi #bicycle #lovestarbicyclebags #barmitts</small>
+                           </div>
+                           <img src="../lsphotos/image000377.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
+                      <a tabindex="1" href="../lsphotos/image000378.jpg" title="Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi" rel="lightbox" class="fancybox">
+                          <div class="hover-text">
+                              <h4>elliotlovestarbicycles</h4>
+                              <small>Custom Lovestar #framebag. Still have a few more things to finish up...but it's getting there quickly. #lovestarbicyclebags #bikepacking #bikebag #custom #cycling #handmade #bikechi</small>
+                           </div>
+                           <img src="../lsphotos/image000378.jpg" class="img-responsive lazy" alt="">
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-sm-6 col-md-3 col-lg-3">
+              <div class="instagram-item">
+                  <div class="hover-bg">
                       <a tabindex="1" href="../lsphotos/image000379.jpg" title="Custom Framebag Velcro coming along... #bikepacking #lovestarbicyclebags #cycling #handmade #Bicycle #bikechi #framebag #SewRad" rel="lightbox" class="fancybox">
                           <div class="hover-text">
                               <h4>elliotlovestarbicycles</h4>
@@ -220,45 +259,6 @@
                               <small>Cold ride into work for #BlackFriday . #cycling #wintercyling coldweathercycling #nobadweather #bikechi #bikecommute #layers #lovestarbicycles #lovestarbicyclebags</small>
                            </div>
                            <img src="../lsphotos/image000395.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000396.jpg" title="Pre-turkey rollers. Happy Thanksgiving everyone! Earn that turkey! #turkeyride #rollers #cycling #bikechi #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Pre-turkey rollers. Happy Thanksgiving everyone! Earn that turkey! #turkeyride #rollers #cycling #bikechi #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000396.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000397.jpg" title="Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Killer shot from the sand at #MelasCX Thanks to #jayloophotography for always making me look better than I am. #cyclocross #sandpit #cx #cycling #chicagocrosscup #bikechi #bicycle #belgianstyle #mud #race #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000397.jpg" class="img-responsive lazy" alt="">
-                      </a>
-                  </div>
-              </div>
-          </div>
-          <div class="col-sm-6 col-md-3 col-lg-3">
-              <div class="instagram-item">
-                  <div class="hover-bg">
-                      <a tabindex="1" href="../lsphotos/image000398.jpg" title="Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags" rel="lightbox" class="fancybox">
-                          <div class="hover-text">
-                              <h4>elliotlovestarbicycles</h4>
-                              <small>Thanks to @pattylouwho55 for the great pic! Lovestar Factory Team looking strong in the Sand at #MelasCX #cyclocross #cx #chicagocrosscup #bikechi #sandpit #lovestarbicycles #lovestarbicyclebags</small>
-                           </div>
-                           <img src="../lsphotos/image000398.jpg" class="img-responsive lazy" alt="">
                       </a>
                   </div>
               </div>
